    
  * Restrict the allowed ports for HTTP CONNECT requests to avoid misuse.
    Type: bugfix
    Changed: wc/proxy/Allowed.py, wc/proxy/HttpClient.py

  * Do not leave out empty HTML attribute values.
    Type: bugfix
    Changed: wc/filter/html/__init__.py

  * Wrap JavaScript in a <![CDATA[]]> section rather than a HTML comment.
    Type: feature
    Changed: wc/js/__init__.py

2.38 "The worlds fastest Indian" (released 5.4.2006)

  * Remove literal "</script>" in embedded JavaScript files.
    Type: bugfix
    Changed: wc/js/__init__.py

  * Correctly use open file descriptor when writing new folder rules.
    Type: bugfix
    Changed: wc/webgui/context/filterconfig_html.py,
      wc/filter/rules/FolderRule.py

  * Don't use unsupported iterkeys() on form object.
    Type: bugfix
    Changed: wc/webgui/context/config_html.py

  * Make sure all methods in the HTML security filter honor that
    attribute values can be None.
    Type: bugfix
    Changed: wc/filter/html/HtmlSecurity.py

  * Always add localhost to the interface address list.
    Type: bugfix
    Changed: wc/dns/resolver.py

  * Parse <!> empty SGML comments in HTML data. And build the HTML
    parser with equivalence class compression which makes it a lot
    smaller and only a little tad slower.
    Also, literal </script> is not allowed anymore in single-line
    JavaScript comments in HTML data.
    Type: feature
    Changed: wc/HtmlParser/htmllex.[lc], wc/tests/test_parser.py

  * Avoid false positives in IE filename overflow and the
    dashes-in-hostname detection.
    Type: bugfix
    Changed: wc/filter/html/HtmlSecurity.py

  * Ignore encoding errors when recursively filtering JavaScript
    content. And make sure that the JavaScript form action attribute
    is not None.
    Type: bugfix
    Changed: wc/filter/html/JSFilter.py

  * Updated advertising filter rules.
    Type: feature
    Changed: config/*.zap

  * Only force changing of content types when the HTTP status code is 2xx,